# blademasters

./: Cargo.toml  build_wasm.sh
.github/workflows/: deploy-game.yml
src/: components.rs  game.rs  main.rs  resources.rs  systems.rs  ui.rs
src/components/: enemy.rs  flying_away.rs  hitbox.rs  levelups.rs  player.rs  scythe.rs  treat.rs
src/resources/: level_options.rs  skill_tracker.rs
src/ui/: level_menu.rs  main_menu.rs  scoreboard_plugin.rs  splash.rs
src/utils/: fps_display.rs  logging.rs  mod.rs
