[package]
name = "combative-survivors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "~0.12.1" }
wasm-bindgen = "0.2.91"
rand_core = "0.6"
bevy_rand = { version = "0.4", features = ["rand_chacha"] }
bevy_prng = "0.2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable highrust optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
